[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13"
anyhow = "1.0.62"
reqwest = "0.11.11"
#async-recursion = "1.0.0"
async-channel = "1.7.1"
tokio = { version = "1.20.1", features = ["full"] }
smol = "*"

futures = { version = "0.3.1", features = ["compat"] }
#futures01 = { package = "futures", version = "0.1", optional = true }
#futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures-core-preview="0.3.0-alpha.19"
async-std = {version = "1.4.0", features = ["unstable", "attributes", "tokio1"]}
