[package]
name = "gar-crawl"
version = "0.1.0"
edition = "2021"
description = "High level HTML crawler with concise builder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/garlic0x1/gar-crawl"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }

[dependencies]
scraper = "0.13"
anyhow = "1.0.62"
reqwest = "0.11.11"
async-channel = "1.7.1"
tokio = { version = "1.20.1", features = [] }
