[package]
name = "gar-crawl"
version = "0.1.13"
edition = "2021"
description = "High level HTML crawler with concise builder"
license = "MIT OR Apache-2.0"
repository = "https://github.com/garlic0x1/gar-crawl"
documentation = "https://docs.rs/gar-crawl"

[dev-dependencies]
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }

[dependencies]
scraper = "0.13"
anyhow = "1.0.62"
reqwest = "0.11.11"
async-channel = "1.7.1"
tokio = "1.20.1"
