[package]
name = "crawler-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crawler = { path = "../" }
scraper = "0.13"
anyhow = "*"
clap = { version = "*", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
