[package]
name = "crawler-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gar-crawl = { path = "../" }
clap = { version = "3.2.17", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
scraper = "0.13"
anyhow = "1.0.62"
reqwest = "0.11.11"
